--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@tamagui/next-plugin": "^1.123.4",
     "@tamagui/next-theme": "^1.123.4",
     "@tanstack/react-query": "^5.65.1",
+    "@tiptap/extension-code-block": "^2.11.4",
+    "@tiptap/extension-image": "^2.11.4",
+    "@tiptap/extension-link": "^2.11.4",
+    "@tiptap/react": "^2.11.4",
+    "@tiptap/starter-kit": "^2.11.4",
     "framer-motion": "^12.0.6",
     "i18next": "^24.2.2",
     "next": "15.1.6",
